# libreflow-api

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
src/: io.rs  lib.rs
src/fcs/: io.rs  mod.rs
src/gml/: mod.rs
tests/: io_test.rs  test_fcs_metadata.txt
tests/data/: test_fcs_3_1_metadata.csv
